// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IsNgInstalled when an unknown error happens while checking for netlify-cli should return false and warn 1`] = `
"foo requires a valid Netlify-CLI installation to run.
An unknown error happened while running undefined version.
some random error oh no

You can install the Netlify-CLI by running npm i -g netlify-cli

Please visit https://docs.netlify.com/cli/get-started/#installation for more detailed installation information."
`;

exports[`IsNgInstalled when netlify-cli is not installed should throw 1`] = `
"foo requires Netlify-CLI to run.

You can install the Netlify-CLI by running npm i -g netlify-cli

Please visit https://docs.netlify.com/cli/get-started/#installation for more detailed installation information."
`;

exports[`IsNgInstalled when the installed version of netlify-cli is lower than the required one should throw 1`] = `
"foo needs a Netlify-CLI version in this range: ">=1.0.0"
Version detected: 0.9.0

You can install the Netlify-CLI by running npm i -g netlify-cli

Please visit https://docs.netlify.com/cli/get-started/#installation for more detailed installation information."
`;

exports[`IsNgInstalled when the requiredVersion is not a semver valid string should throw 1`] = `
"Required version invalid: "foo".
Please report this error to Coveo: https://github.com/coveo/cli/issues/new"
`;
